@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.videomediaset" name="Mediaset Play" provider-name="phate89, aracnoz" version="2.0.3+matrix.1">
+<addon id="plugin.video.videomediaset" name="Mediaset Play Infinity" provider-name="phate89, aracnoz" version="2.0.6+matrix.1">
     <requires>
         <import addon="xbmc.python" version="3.0.0" />
-        <import addon="script.module.phate89" version="1.2.1"/>
+        <import addon="script.module.phate89" version="1.2.1+matrix.1"/>
         <import addon="script.module.inputstreamhelper" version="0.0.1"/>
     </requires>
     <extension library="default.py" point="xbmc.python.pluginsource">
@@ -19,10 +19,9 @@
         <forum>https://forum.kodi.tv/showthread.php?tid=292876</forum>
         <source>https://github.com/phate89/plugin.video.videomediaset</source>
         <reuselanguageinvoker>true</reuselanguageinvoker>
-        <news>2.0.3
-- fixed live channel list loading in pre-matrix with spechial characters (thx to madpilot78)
-- added paging for videos
-- added range in url requests (thx to thinkingmik)
+        <news>2.0.6
+- update name and branding after mediaset branding change
+- Fix assets request after site change
         </news>
         <assets>
             <icon>resources/icon.png</icon>
